--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,13 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Local env files
-.env*.local
+# Local env files - CRITICAL
 .env
+.env*.local
+.env*.backup
+.env.local.backup
+.env.production
+.env.development
 
 # Vercel
 .vercel
@@ -40,3 +44,7 @@ logs
 # Posters
 public/posters/*.png
 !public/posters/.gitkeep
+
+# README (contains sensitive info)
+README.md
+prd.md
