--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,10 +1,50 @@
+# HTTP 服务器 - 重定向到 HTTPS
 server {
     listen 80;
-    server_name your-domain.com;
+    listen [::]:80;
+    server_name redpillpower.com www.redpillpower.com;
 
-    # 可选：重定向到 HTTPS
-    # return 301 https://$server_name$request_uri;
+    # Let's Encrypt 验证路径
+    location /.well-known/acme-challenge/ {
+        root /var/www/html;
+    }
 
+    # 其他请求重定向到 HTTPS
+    location / {
+        return 301 https://$server_name$request_uri;
+    }
+}
+
+# HTTPS 服务器
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name redpillpower.com www.redpillpower.com;
+
+    # SSL 证书配置（使用 Let's Encrypt）
+    ssl_certificate /etc/letsencrypt/live/redpillpower.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/redpillpower.com/privkey.pem;
+
+    # SSL 安全配置
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    # HSTS (可选，启用后强制使用 HTTPS 6个月)
+    add_header Strict-Transport-Security "max-age=15768000; includeSubDomains" always;
+
+    # 安全头
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+
+    # 日志
+    access_log /var/log/nginx/pricesignal_access.log;
+    error_log /var/log/nginx/pricesignal_error.log;
+
+    # 反向代理到 Next.js 应用
     location / {
         proxy_pass http://localhost:3000;
         proxy_http_version 1.1;
@@ -19,6 +59,7 @@ server {
         # 超时设置（用于海报生成）
         proxy_read_timeout 300s;
         proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
     }
 
     # 静态文件缓存
@@ -32,25 +73,7 @@ server {
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
+    gzip_proxied any;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json application/javascript;
+    gzip_disable "msie6";
 }
-
-# 可选：HTTPS 配置（使用 Let's Encrypt）
-# server {
-#     listen 443 ssl http2;
-#     server_name your-domain.com;
-#
-#     ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
-#
-#     location / {
-#         proxy_pass http://localhost:3000;
-#         proxy_http_version 1.1;
-#         proxy_set_header Upgrade $http_upgrade;
-#         proxy_set_header Connection 'upgrade';
-#         proxy_set_header Host $host;
-#         proxy_cache_bypass $http_upgrade;
-#         proxy_read_timeout 300s;
-#         proxy_connect_timeout 300s;
-#     }
-# }
